POW-13 Validations added,overflow bug fixed

--- a/src/assets/css/black-dashboard-react.css
+++ b/src/assets/css/black-dashboard-react.css
@@ -91,7 +91,7 @@ body {
 hr {
   box-sizing: content-box;
   height: 0;
-  overflow: visible; }
+  overflow: hidden; }
 
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
@@ -232,7 +232,7 @@ textarea {
 
 button,
 input {
-  overflow: visible; }
+  overflow: hidden; }
 
 button,
 select {
@@ -5914,7 +5914,7 @@ button.bg-darker:focus {
   position: static;
   width: auto;
   height: auto;
-  overflow: visible;
+  overflow: hidden;
   clip: auto;
   white-space: normal; }
 
