--- a/src/assets/scss/black-dashboard-react/custom/_tables.scss
+++ b/src/assets/scss/black-dashboard-react/custom/_tables.scss
@@ -157,6 +157,7 @@
 
 .table-responsive{
   overflow: scroll;
+  overflow: hidden;
   padding-bottom: 10px;
 }
 
