--- a/src/assets/scss/black-dashboard-react/custom/utilities/_helper.scss
+++ b/src/assets/scss/black-dashboard-react/custom/utilities/_helper.scss
@@ -22,7 +22,7 @@
 // Overflows
 
 .overflow-visible {
-    overflow: visible !important;
+    overflow: hidden !important;
 }
 .overflow-hidden {
     overflow: hidden !important;
